# astroscan

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_BACKLOG_20260505.md  AUDIT_CARTOGRAPHIES_2026-05-09.md  AUDIT_IMPERFECTIONS_2026-05-09.md  AUDIT_PASS20_RESIDUAL.md  CHANGELOG.md  CLEANUP_REPORT_VAGUES_1_2.md  CONTRIBUTING.md  DEPLOYMENT.md  ETAT_DES_LIEUX.md  FICHE_TECHNIQUE.md  IMPORTANT_README.txt  INFRASTRUCTURE_AUDIT_20260506.md  KNOWN_ISSUES.md  LICENSE  MANIFESTE_SCIENTIFIQUE_2026.md  MANIFESTO.md  MIGRATION_PLAN.md  Makefile  OBSERVATOIRE_REFACTOR_PHASE_OB.md  OBSERVATOIRE_REFACTOR_PHASE_OE.md  OBSERVATOIRE_REFACTOR_PHASE_OF.md  OBSERVATOIRE_REFACTOR_PHASE_OH.md  OBSERVATOIRE_REFACTOR_PHASE_OI.md  PASS20_0_PREAUDIT_REPORT.md  PASS_20_1_REPORT.md  PASS_20_2_REPORT.md  PASS_20_3_REPORT.md  PASS_21_1_REPORT.md  PASS_21_2_REPORT.md  PASS_21_3_REPORT.md  PASS_21_4_REPORT.md  PASS_22_1_REPORT.md  PASS_22_2_REPORT.md  PASS_23_1_REPORT.md  PASS_23_2_REPORT.md  PASS_27_10_REPORT.md  (+93 more)
app/: __init__.py  bootstrap.py  (+2 more)
telescope_bridge_agent/: README.md  pyproject.toml
telescope_bridge_agent/astroscan_bridge/: __main__.py
telescope_bridge_agent/astroscan_bridge/adapters/: alpaca.py  base.py  mock.py
telescope_bridge_agent/astroscan_bridge/cloud/: __init__.py  client.py
telescope_bridge_agent/astroscan_bridge/safety/: audit.py  http_guard.py  readonly_filter.py
telescope_bridge_agent/simulator/: alpaca_sim.py  run_sim.sh  validate_alpaca.py
telescope_bridge_agent/tests/: test_alpaca_readonly.py  test_mock_adapter.py  test_safety_ast.py
(+555 files in other folders)
